--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(LIME)
 export(SPiCT)
 export(spict)
 import(MSEtool)
+import(dplyr)
 importClassesFrom(MSEtool,Assessment)
 importMethodsFrom(MSEtool,plot)
 importMethodsFrom(MSEtool,summary)
